Random sequence generation

--- a/mp/05/11-Simon/Simon/Base.lproj/Main.storyboard
+++ b/mp/05/11-Simon/Simon/Base.lproj/Main.storyboard
@@ -62,6 +62,7 @@
                                 </constraints>
                                 <connections>
                                     <action selector="sequenceSelection:" destination="BYZ-38-t0r" eventType="valueChanged" id="Z3L-hk-jiJ"/>
+                                    <action selector="sliderFinalValue:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KPO-tN-cXT"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sequence Length: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzQ-jK-lYR">
@@ -131,7 +132,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="400" y="278"/>
+            <point key="canvasLocation" x="-804" y="-63"/>
         </scene>
     </scenes>
 </document>
