--- a/mp/05/11-Simon/Simon/Base.lproj/Main.storyboard
+++ b/mp/05/11-Simon/Simon/Base.lproj/Main.storyboard
@@ -75,14 +75,11 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sja-IN-nLJ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sja-IN-nLJ">
                                 <rect key="frame" x="382" y="320" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="313" y="320" width="11" height="21"/>
-                                </variation>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -90,7 +87,7 @@
                         <constraints>
                             <constraint firstItem="szL-Gg-obo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="66m-VU-4ey"/>
                             <constraint firstItem="sja-IN-nLJ" firstAttribute="leading" secondItem="jzQ-jK-lYR" secondAttribute="trailing" constant="40" id="8vW-go-Bab">
-                                <variation key="widthClass=compact" constant="38"/>
+                                <variation key="widthClass=compact" constant="69"/>
                             </constraint>
                             <constraint firstAttribute="bottom" secondItem="fRZ-gq-o4R" secondAttribute="bottom" id="Ah8-bp-CPz"/>
                             <constraint firstItem="szL-Gg-obo" firstAttribute="width" secondItem="YJN-Oz-abc" secondAttribute="width" id="CnU-Km-qmj"/>
