--- a/mp/03/Hackathon/Hackathon/Main.storyboard
+++ b/mp/03/Hackathon/Hackathon/Main.storyboard
@@ -122,7 +122,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="558"/>
                                 </variation>
                                 <connections>
-                                    <outlet property="delegate" destination="JdK-dl-UK4" id="dSP-Qb-YxY"/>
+                                    <outlet property="delegate" destination="JdK-dl-UK4" id="dak-ag-XjI"/>
                                 </connections>
                             </mapView>
                         </subviews>
@@ -139,6 +139,9 @@
                         </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" image="pin-map-7.png" selectedImage="pin-map-7.png" id="3s4-gR-BSC"/>
+                    <connections>
+                        <outlet property="mapView" destination="EKo-oF-zzT" id="mBk-CX-5yt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bFq-Fu-Hyz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
